--- a/public/css/app.css
+++ b/public/css/app.css
@@ -97,11 +97,15 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 #forums .forum-message {padding: .5em; min-height: 200px;position: relative;margin-bottom: 1em; border-radius:.5em;border:1px solid #ccc;}
 #forums .forum-message.even {background-color: #fff;}
 #forums .forum-message.odd {background-color: #FCFCFC;}
+#forums .forum-message.solve{background-color: #F7E9DE;}
 #forums .forum-message .forum-text {margin-top: 5px; margin-bottom: 30px; padding-right: 10px;}
 #forums .forum-message .user-infos { float:left; width: 270px; padding-top: 10px;}
 #forums .forum-message .user-infos img { height: 100px; width: 100px; float:left; margin: 0px 10px 10px 10px;}
 #forums .forum-message .forum-text-zone { margin-left:270px;}
-#forums .forum-message .forum-text-tools { position: absolute; bottom: 15px; right: 15px;}
+#forums .forum-message .forum-text-tools { position: absolute; bottom: 15px; right: 15px; margin: 0; padding: 0;}
+#forums .forum-message .forum-text-tools li { display: inline-block; list-style: none; margin: 0; padding: 0; }
+#forums .forum-message .forum-text-tools li a, #forums .forum-message .forum-text-tools li button  { padding: .5em; border-radius: 4px; border: none; outline: none; color: white; background: #f0523f; }
+#forums .forum-message .forum-text-tools li a:hover, #forums .forum-message .forum-text-tools li button:hover  { box-shadow: 1px 1px 2px #aaa;text-decoration: none; background: white;  color: #f0523f; border:1px solid #f0523f;}
 #forums .btn-new, #forums .btn-reply, #forums .btn-valider {display: inline-block;background-color: #DAF084;color: #607A51;padding: .5em 1em;border-radius: .5em; float:right; margin-bottom: 5px;}
 #forums .btn-new:hover, #forums .btn-reply:hover, #forums .btn-valider:hover {background-color: #4EA832;color: #E0FFCF;text-decoration: none;}
 #forums .btn-valider {margin:15px auto 15px 15px;}
