--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,7 @@ h1 {font-weight: normal;}
 h2 {font-weight: normal;color: #f0523f;}
 p {line-height: 1.6;}
 a {color: #f0523f; text-decoration: none}
+a:focus {outline:0;}
 a:hover {text-decoration: underline;}
 pre { padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 20px;word-break: break-all; word-wrap: break-word; white-space: pre; white-space: pre-wrap; background-color: #f5f5f5; border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.15); border-radius: 4px;}
 blockquote {background: #FFE4CB;color: #926224;margin: 0;padding: .5em 1em;border-radius: .4em;}
@@ -42,7 +43,8 @@ body > header h1 img {float:left;margin: .5em 0;height: 30px;}
 body > header a {color : #F4F4F4;text-decoration: none;padding: 1em 0 1em 2em;}
 body > header a:hover, body > header li.active > a {color: #FFE4CF;text-decoration: none}
 body > header a i {margin-right: .5em;}
-body > header ul.menu {float: right;font-size: 1.1em;text-align: right;}
+body > header ul.menu {float: left;font-size: 1.1em;text-align: right; padding-left: 10px;}
+body > header ul.menu.menu-account {float: right;}
 body > header ul li {position: relative; float:left;}
 body > header ul li.toggle {display: none}
 body > header ul ul {display: none;position: absolute;top: 1em;left: 1.3em;background: #443d3c;line-height: normal;padding: 0;border:1px solid #CCC;border-top:none;box-shadow: #474747 1px 1px 1px;}
