--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@
  Orange : #f0523f
  Grey : #443d3c
 */
-html, body {padding: 0;margin: 0; font-size: 14px; font-family: 'Open Sans', sans-serif;color:#808080; padding-bottom: 25px;min-height: 100%}
+html, body {padding: 0;margin: 0; font-size: 1em; font-family: 'Open Sans', sans-serif;color:#808080; padding-bottom: 25px;min-height: 100%}
 
 h1 {font-weight: normal;}
 h2 {font-weight: normal;color: #f0523f;}
@@ -13,7 +13,7 @@ p {line-height: 1.6;}
 a {color: #f0523f; text-decoration: none}
 a:focus {outline:0;}
 a:hover {text-decoration: underline;}
-pre { padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 20px;word-break: break-all; word-wrap: break-word; white-space: pre; white-space: pre-wrap; background-color: #f5f5f5; border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.15); border-radius: 4px;}
+pre { padding: 9.5px; margin: 0 0 10px; font-size: 1em; line-height: 20px;word-break: break-all; word-wrap: break-word; white-space: pre; white-space: pre-wrap; background-color: #f5f5f5; border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.15); border-radius: 4px;}
 blockquote {background: #FFE4CB;color: #926224;margin: 0;padding: .5em 1em;border-radius: .4em;}
 
 .container {width: 1060px; margin: 0 auto}
@@ -167,7 +167,7 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 
 /* wiki */
 #wiki header .page-title {float:left;}
-#wiki header .page-title h1 {font-size: 26px; margin:16px 0 0 0;}
+#wiki header .page-title h1 {font-size: 2em; margin:16px 0 0 0;}
 #wiki .page-actions {float:right; margin:16px 0px;}
 #wiki header ul {margin:0; padding:0; list-style-type: none;}
 #wiki header ul li {margin-left:5px; display: inline-block;}
@@ -181,8 +181,8 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 /* wiki diff */
 #wiki .Differences { width: 100%; border-collapse: collapse; border-spacing: 0; empty-cells: show;}
 #wiki .Differences thead th { text-align: left; border-bottom: 1px solid #463C3B; background: #5B4C4A; color: #FFF; padding: 4px;}
-#wiki .Differences tbody th { text-align: right; background: #5B4C4A; width: 4em; padding: 1px 2px; border-right: 1px solid #463C3B; vertical-align: top; font-size: 13px; color: #fff;}
-#wiki .Differences td { padding: 1px 2px; font-family: Consolas, monospace; font-size: 13px;}
+#wiki .Differences tbody th { text-align: right; background: #5B4C4A; width: 4em; padding: 1px 2px; border-right: 1px solid #463C3B; vertical-align: top; font-size: 1em; color: #fff;}
+#wiki .Differences td { padding: 1px 2px; font-family: Consolas, monospace; font-size: 1em;}
 #wiki .Differences ins, #wiki .Differences del { text-decoration: none;}
 #wiki .Differences .Skipped { background: #f7f7f7;}
 #wiki .DifferencesInline .ChangeReplace .Left,
