--- a/resources/assets/stylus/blocks/forums/forums_topiclist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_topiclist.styl
@@ -5,12 +5,18 @@
 
 .Forums__TopicList__Item {
   list-style none;
-  padding: 0.8rem 1rem;
   lost-utility: clearfix;
+  padding: 0.8rem 1rem;
 
   &:hover {
     background: #eee;
   }
+}
+
+.Forums__TopicList__Item__Link {
+  display: block;
+  color: black;
+  lost-utility: clearfix;
 }
 
 .Forums__TopicList__Item__Avatar {
