--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -23,6 +23,39 @@
 }
 
 
+.Forums__Paginator {
+
+  margin-top 2rem;
+
+  ul {
+    padding 0;
+    margin 0;
+    text-align center
+  }
+
+  li {
+    list-style none;
+    display inline-block
+
+    a {
+      buttonLike();
+      background $orange;
+      color white;
+      padding: .3rem 1rem;
+      font-weight bold;
+      text-decoration: none;
+      &:hover {
+        color: white;
+      }
+    }
+
+    &.disabled {
+      display none;
+    }
+  }
+}
+
+
 @import "./forums_sidebar"
 @import "./forums_categorylabel"
 @import "./forums_topiclist"
