--- a/resources/assets/stylus/blocks/forums/forums_messagelist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_messagelist.styl
@@ -30,6 +30,23 @@
       border-color: $orange;
     }
   }
+
+  & blockquote {
+    background-color: #FDE4E2;
+    margin: 0;
+    padding: .8rem 0 .8rem 2rem;
+    border: 1px solid #F9AEA9;
+
+    & p {
+      margin 0;
+      padding 0;
+    }
+  }
+
+  & pre > code {
+    font-family: 'Ubuntu Mono';
+    padding: 1rem;
+  }
 }
 
 .Forums__MessageList_Message__Content__Authoring {
