add hightlight js

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -16,3 +16,7 @@
 @import "blocks/siteheader/siteheader"
 @import "blocks/forums/forums"
 @import "blocks/buttons/buttons"
+
+
+// code
+@import "./../../../node_modules/highlight.js/styles/solarized_dark.css"
