Login & Logout ok

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -5,18 +5,19 @@
 @import "vendor/normalize.css"
 @import "settings"
 @import "general"
-
-
-.Utility__Container {
-  lost-center: $siteWidth;
-}
+@import "utility"
 
 
 // blocks
 @import "blocks/siteheader/siteheader"
 @import "blocks/forums/forums"
 @import "blocks/buttons/buttons"
+@import "blocks/sitefooter/sitefooter"
+
+// pages
+@import "pages/forums"
 
 
 // code
 @import "./../../../node_modules/highlight.js/styles/solarized_dark.css"
+@import "./../../../node_modules/sweetalert/dist/sweetalert.css"
