--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -12,6 +12,7 @@
 @import "blocks/siteheader/siteheader"
 @import "blocks/forums/forums"
 @import "blocks/buttons/buttons"
+@import "blocks/modals/modal"
 @import "blocks/sitefooter/sitefooter"
 
 // pages
