--- a/resources/assets/stylus/blocks/forums/forums_messagelist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_messagelist.styl
@@ -17,6 +17,10 @@
 
 .Forums__MessageList__Message__Content {
   lost-column: 89/100;
+
+  & .hljs {
+    padding: 1rem;
+  }
 }
   
 .Forums__MessageList__Message__Content__Html {
