--- a/resources/assets/stylus/blocks/modals/modal.styl
+++ b/resources/assets/stylus/blocks/modals/modal.styl
@@ -1,21 +1,22 @@
-.modal-mask {
+.Modal {
   position: fixed;
   z-index: 9998;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .3);
   display: table;
   transition: opacity .3s ease;
+  background rgba(0, 0, 0, 0.3);
 }
 
-.modal-wrapper {
-  display: table-cell;
-  vertical-align: bottom;
+.Modal__Wrapper {
+  position relative;
+  display table-cell;
+  vertical-align middle
 }
 
-.modal-container {
+.Modal__Wrapper__Container {
   width: $siteWidth * 0.7;
   margin: 0 auto;
   padding: 1.7rem 2.2rem;
@@ -23,16 +24,16 @@
   transition: all .3s ease;
 }
 
-.modal-header h3 {
+.Modal__Wrapper__Container__Header h3 {
   margin-top: 0;
   color: $orange;
 }
 
-.modal-body {
+.Modal__Wrapper__Container__Body {
   margin: 1.3rem 0;
 }
 
-.modal-footer {
+.Modal__Wrapper__Container__Footer {
   text-align right;
 }
 
@@ -45,12 +46,17 @@
  * these styles.
  */
 
-.modal-enter, .modal-leave {
+.Modal-enter, .Modal-leave {
   opacity: 0;
 }
 
-.modal-enter .modal-container,
-.modal-leave .modal-container {
+.Modal-enter .Modal__Wrapper__Container,
+.Modal-leave .Modal__Wrapper__Container {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+
+
+
+@import "new-topic"
