--- a/resources/assets/stylus/settings.styl
+++ b/resources/assets/stylus/settings.styl
@@ -23,3 +23,6 @@ $siteWidth = 1180px;
 //================
 $orange = #f55247;
 $white = #fdfdfd;
+$black = #696969;
+$lightgrey = #ddd;
+$lightgray = $lightgrey;
