--- a/public/css/app.css
+++ b/public/css/app.css
@@ -427,6 +427,7 @@ th {
 html {
   box-sizing: border-box;
   font-family: "Source Sans Pro", sans-serif;
+  color: #696969;
 }
 *,
 *:before,
@@ -546,8 +547,8 @@ body {
 .SiteHeader__Inner__Nav__Links__Link__Sub__Link {
   background: #f55247;
   display: block;
-  color: #fff;
-  text-shadow: 0 -1px 0 #000;
+  color: #fdfdfd;
+  text-shadow: 0 -1px 0 #696969;
 }
 .SiteHeader__Inner__Nav__Links__Link__Sub__Link > a {
   color: #fff;
@@ -656,7 +657,7 @@ body {
   padding: 0.2rem 0;
 }
 .Forums__Sidebar__CategoriesList__Item a {
-  color: #000;
+  color: #696969;
   text-decoration: none;
 }
 .Forums__Sidebar__CategoriesList__Item a:hover {
@@ -718,7 +719,7 @@ body {
 }
 .Forums__TopicList__Item__Link {
   display: block;
-  color: #000;
+  color: #696969;
   *zoom: 1;
 }
 .Forums__TopicList__Item__Link:before{
@@ -858,17 +859,24 @@ body {
   border-color: #f55247;
 }
 .Forums__MessageList__Message__Content__Html blockquote {
-  background-color: #fde4e2;
+  background-color: #fddcda;
   margin: 0;
   padding: 0.8rem 0 0.8rem 2rem;
-  border: 1px solid #f9aea9;
+  border: 1px solid #fbbab5;
 }
 .Forums__MessageList__Message__Content__Html blockquote p {
   margin: 0;
   padding: 0;
 }
-.Forums__MessageList__Message__Content__Html pre > code {
+.Forums__MessageList__Message__Content__Html code {
   font-family: 'Ubuntu Mono';
+}
+.Forums__MessageList__Message__Content__Html p > code {
+  padding: 0 0.3rem 0.1rem;
+  border: 1px solid #ddd;
+  background-clip: padding-box;
+}
+.Forums__MessageList__Message__Content__Html pre > code {
   padding: 1rem;
 }
 .Forums__MessageList_Message__Content__Authoring {
@@ -901,11 +909,26 @@ body {
   user-select: none;
   line-height: 20px;
   padding: 8px 13px;
-  color: #7089a9;
-  background: #e7edf3;
-  border: 0;
+  border: 1px solid #ddd;
 }
-.Button_NewTopic {
+.Button:focus {
+  outline: 1px solid #ddd;
+}
+.Button--Submit {
+  background-color: #f55247;
+  color: #fdfdfd;
+  text-decoration: none;
+  border-color: 1px solid #f3281a;
+}
+.Button--Submit:focus {
+  outline: 1px solid #f3281a;
+}
+.Button--Cancel {
+  background-color: #fdfdfd;
+  color: #696969;
+  text-decoration: none;
+}
+.Button--NewTopic {
   width: 100%;
   background-color: #f55247;
   color: #fdfdfd;
@@ -913,46 +936,100 @@ body {
   font-weight: bold;
   font-size: 1.1rem;
 }
-.modal-mask {
+.Modal {
   position: fixed;
   z-index: 9998;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.3);
   display: table;
   transition: opacity 0.3s ease;
+  background: rgba(0,0,0,0.3);
 }
-.modal-wrapper {
+.Modal__Wrapper {
+  position: relative;
   display: table-cell;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
-.modal-container {
+.Modal__Wrapper__Container {
   width: 826px;
   margin: 0 auto;
   padding: 1.7rem 2.2rem;
   background-color: #fdfdfd;
   transition: all 0.3s ease;
 }
-.modal-header h3 {
+.Modal__Wrapper__Container__Header h3 {
   margin-top: 0;
   color: #f55247;
 }
-.modal-body {
+.Modal__Wrapper__Container__Body {
   margin: 1.3rem 0;
 }
-.modal-footer {
+.Modal__Wrapper__Container__Footer {
   text-align: right;
 }
-.modal-enter,
-.modal-leave {
+.Modal-enter,
+.Modal-leave {
   opacity: 0;
 }
-.modal-enter .modal-container,
-.modal-leave .modal-container {
+.Modal-enter .Modal__Wrapper__Container,
+.Modal-leave .Modal__Wrapper__Container {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+.Modal--NewTopic .Modal__Wrapper {
+  vertical-align: bottom;
+}
+.Modal--NewTopic .Form__Row--Category {
+  *zoom: 1;
+}
+.Modal--NewTopic .Form__Row--Category:before{
+    content: '';
+    display: table;
+}
+.Modal--NewTopic .Form__Row--Category:after{
+    content: '';
+    display: table;
+    clear: both;
+}
+.Modal--NewTopic .Form__Row--Category input[type=radio] {
+  width: 0;
+  height: 0;
+  display: none;
+}
+.Modal--NewTopic .Form__Row--Category input[type=radio] + label {
+  padding: 0.5rem 1rem;
+  background: #bbb;
+  color: #000;
+  display: inline-block;
+  margin: 0.5rem 0.5rem;
+}
+.Modal--NewTopic .Form__Row--Category input[type=radio]:checked + label {
+  color: #fff;
+  background: #ff4500;
+}
+.Form__Row {
+  margin-top: 2rem;
+}
+.Form__Row__Label {
+  height: 2rem;
+  display: block;
+  font-weight: bold;
+}
+.Form__Row__Control {
+  height: 2rem;
+  width: 100%;
+  padding: 5px 10px;
+}
+.Form__Row__Control:not([type=file]) {
+  border: 1px solid #696969;
+}
+textarea.Form__Row__Control {
+  min-height: 10rem;
+}
+.Form__Row--Buttons {
+  text-align: right;
 }
 .SiteFooter {
   background-color: #f55247;
