--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -13,6 +13,7 @@
 @import "blocks/forums/forums"
 @import "blocks/buttons/buttons"
 @import "blocks/modals/modal"
+@import "blocks/forms/form"
 @import "blocks/sitefooter/sitefooter"
 
 // pages
