--- a/resources/assets/stylus/blocks/buttons/buttons.styl
+++ b/resources/assets/stylus/blocks/buttons/buttons.styl
@@ -3,12 +3,31 @@
 
   line-height: 20px;
   padding: 8px 13px;
-  color: #7089a9;
-  background: #e7edf3;
-  border: 0;
+  border: 1px solid $lightgrey;
+  &:focus {
+    outline 1px solid $lightgrey;
+  }
 }
 
-.Button_NewTopic {
+.Button--Submit{
+  background-color: $orange;
+  color: $white;
+  text-decoration none;
+  border-color  1px solid darken($orange, 15%);
+  &:focus {
+    outline 1px solid darken($orange, 15%);
+  }
+}
+
+.Button--Cancel{
+  background-color: $white;
+  color: $black;
+  text-decoration none;
+}
+
+
+
+.Button--NewTopic {
   width 100%;
   background-color: $orange;
   color: $white;
