--- a/resources/assets/stylus/blocks/siteheader/siteheader.styl
+++ b/resources/assets/stylus/blocks/siteheader/siteheader.styl
@@ -62,8 +62,8 @@
 .SiteHeader__Inner__Nav__Links__Link__Sub__Link {
   background: $orange;
   display: block;
-  color: #fff;
-  text-shadow: 0 -1px 0 #000;
+  color: $white;
+  text-shadow: 0 -1px 0 $black;
   & > a {
     color: white;
     text-decoration none;
