working on forum style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -896,6 +896,23 @@ body {
   border-radius: 13px;
   border: 1px solid #d3d3d3;
 }
+.Forums--Fullpage .Forums__Content {
+  width: calc(99.99% * 1/1 - (30px - 30px * 1/1));
+}
+.Forums--Fullpage .Forums__Content:nth-child(n){
+    float: left;
+    margin-right: 30px;
+    clear: none;
+}
+.Forums--Fullpage .Forums__Content:last-child{
+    margin-right: 0;
+}
+.Forums--Fullpage .Forums__Content:nth-child(1n){
+    margin-right: 0;
+}
+.Forums--Fullpage .Forums__Content:nth-child(1n + 1){
+    clear: left;
+}
 .Button {
   display: inline-block;
   margin-bottom: 0;
