--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -18,8 +18,8 @@
 
 .Forums__Content {
   margin-top: 2rem;
-  lost-offset: -1/20
-  lost-column: 15/20
+  lost-offset: -1 / 20
+  lost-column: 15 / 20
 }
 
 
@@ -61,3 +61,10 @@
 @import "./forums_topiclist"
 @import "./forums_messagelist"
 @import './forums_searchbar'
+
+
+.Forums--Fullpage {
+  & .Forums__Content {
+    lost-column: 1/1
+  }
+}
