--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -15,6 +15,7 @@
 @import "blocks/modals/modal"
 @import "blocks/forms/form"
 @import "blocks/sitefooter/sitefooter"
+@import "blocks/pagination"
 
 // pages
 @import "pages/forums"
