--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -24,35 +24,8 @@
 
 
 .Forums__Paginator {
-
   margin-top 2rem;
-
-  ul {
-    padding 0;
-    margin 0;
-    text-align center
-  }
-
-  li {
-    list-style none;
-    display inline-block
-
-    a {
-      buttonLike();
-      background $orange;
-      color white;
-      padding: .3rem 1rem;
-      font-weight bold;
-      text-decoration: none;
-      &:hover {
-        color: white;
-      }
-    }
-
-    &.disabled {
-      display none;
-    }
-  }
+  float: right;
 }
 
 
