--- a/resources/assets/stylus/blocks/forums/forums_messagelist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_messagelist.styl
@@ -8,19 +8,47 @@
   lost-utility: clearfix;
   padding: 1rem 0 3rem 0;
   border-bottom 1px solid $lightgrey;
+
+  &:last-child {
+    border-bottom 1px solid transparent;
+  }
 }
 
 
-.Forums__MessageList__Message__Avatar {
-  lost-column: 11/100;
+.Forums__MessageList__Message__Side {
+  lost-column: 20/100;
+}
+
+.Forums__MessageList__Message__Side__Avatar {
+  text-align center
+}
+
+.Forums__MessageList__Message__Side__UserInfos__Label {
+  font-weight bold;
+}
+
+.Forums__MessageList__Message__Side__UserInfos__Info {
+  margin 0
 }
 
 .Forums__MessageList__Message__Content {
-  lost-column: 89/100;
+
+  & a {
+    color: $black;
+  }
+
+  lost-column: 80/100;
+  border-left: 1px solid $lightgrey;
+  padding-left: .7rem;
 
   & .hljs {
-    padding: 1rem;
+    padding: .8rem;
+    padding-right: 0;
   }
+
+    & pre {
+      overflow: hidden;
+    }
 }
   
 .Forums__MessageList__Message__Content__Html {
