--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -25,7 +25,11 @@
 
 .Forums__Paginator {
   margin-top 2rem;
-  float: right;
+  text-align center;
+  &.Forums__Paginator--Right {
+    float: right;
+    text-align right;
+  }
 }
 
 
