--- a/resources/assets/stylus/blocks/buttons/buttons.styl
+++ b/resources/assets/stylus/blocks/buttons/buttons.styl
@@ -1,12 +1,18 @@
 .Button {
   buttonLike()
 
-  line-height: 20px;
-  padding: 8px 13px;
+  line-height: 1.4rem;
+  padding: .6rem 1rem;
   border: 1px solid $lightgrey;
   &:focus {
     outline 1px solid $lightgrey;
   }
+}
+
+.Button--Small {
+  line-height: 1rem;
+  padding: .3rem .7rem;
+  font-size .8rem;
 }
 
 .Button--Submit{
