--- a/resources/assets/stylus/blocks/forums/forums_messagelist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_messagelist.styl
@@ -36,6 +36,7 @@
 .Forums__MessageList__Message__Content {
 
   padding-bottom: 1rem;
+  min-height 190px;
 
   & a {
     color: $black;
@@ -110,4 +111,9 @@
   top 1rem;
   right: 0;
   margin-bottom 1rem;
+
+  & > .Button {
+    background-color: $orange;
+    color: $white;
+  }
 }
