--- a/resources/assets/stylus/blocks/forms/form.styl
+++ b/resources/assets/stylus/blocks/forms/form.styl
@@ -25,3 +25,15 @@
 .Form__Row--Buttons {
   text-align right;
 }
+
+.Form__ErrorList {
+  background: #FFD2D2;
+  border: 1px solid #FF8383;
+  padding: 1rem;
+}
+
+.Form__ErrorList__Item {
+  margin: 0;
+  margin-left: 1rem;
+  padding: 0;
+}
