ajout de simpleMDE

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -9,18 +9,21 @@
 
 
 // blocks
-@import "blocks/siteheader/siteheader"
+@import "blocks/siteheader"
 @import "blocks/forums/forums"
-@import "blocks/buttons/buttons"
+@import "blocks/buttons"
 @import "blocks/modals/modal"
-@import "blocks/forms/form"
-@import "blocks/sitefooter/sitefooter"
+@import "blocks/form"
+@import "blocks/sitefooter"
 @import "blocks/pagination"
+@import "blocks/loginbox"
 
 // pages
 @import "pages/forums"
 
 
-// code
+// external
 @import "./../../../node_modules/highlight.js/styles/solarized_dark.css"
 @import "./../../../node_modules/sweetalert/dist/sweetalert.css"
+@import "./../../../node_modules/simplemde/dist/simplemde.min.css"
+@import "./../../../node_modules/font-awesome/css/font-awesome.css"
